# nothx

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: email-expert.md
.claude/commands/: lint.md  release.md  test.md
.github/workflows/: ci.yml  publish.yml
nothx/: __init__.py  __main__.py  authres.py  cli.py  config.py  db.py  errors.py  footer.py  imap.py  logging.py  mailbox.py  models.py  msauth.py  provider_signals.py  safefetch.py  scanner.py  scheduler.py  theme.py  tui.py  unsubscriber.py
nothx/classifier/: __init__.py  ai.py  engine.py  heuristics.py  learner.py  patterns.py  rules.py  utils.py
nothx/classifier/data/: patterns.json
nothx/classifier/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
patterns/: defaults.json
tests/: __init__.py  test_ai_parsing.py  test_anthropic_provider.py  test_authres.py  test_classifier.py  test_cli.py  test_cli_overhaul.py  test_config.py  test_db.py  test_db_v2.py  test_engine.py  test_errors_validation.py  test_footer.py  test_heuristics_learning.py  test_heuristics_signals.py  test_imap.py  test_imap_incremental.py  test_learner.py  test_mailbox.py  test_migration.py  test_models.py  test_msauth.py  test_policy_config.py  test_provider_signals.py  test_safefetch.py  test_scanner_signals.py  test_scanner_v2.py  test_scheduler.py  test_spam_policy_v2.py  test_tui.py  test_unsubscriber.py  test_unsubscriber_v2.py  test_utils.py
tests/fixtures/headers/: authenticated_subscription.eml  cold_outreach.eml  forwarded_broken.eml  malformed_unsubscribe.eml  phishing_outlook.eml  protected_bank_marketing.eml  transactional_bulk.eml
